--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ android {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
+        exclude("META-INF/LICENSE.md")
+        exclude("META-INF/LICENSE-notice.md")
     }
 
     android {
@@ -71,14 +73,6 @@ android {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation("androidx.compose.runtime:runtime-livedata:1.4.2")
-    implementation 'com.google.android.libraries.places:places:3.1.0'
-    implementation "com.google.android.gms:play-services-maps:18.1.0"
-    implementation "com.google.android.gms:play-services-location:21.0.1"
-    implementation "com.google.android.gms:play-services-wearable:18.0.0"
-    implementation "com.google.android.gms:play-services-analytics:18.0.2"
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
@@ -130,17 +124,8 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    implementation "androidx.compose.ui:ui-util:$compose_ui_version"
-
-
 
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
-
-    // Camera/Pictures
-    implementation "io.coil-kt:coil-compose:2.3.0"
-    implementation 'com.google.accompanist:accompanist-pager:0.23.0'
-
-
 
 }
 
