--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,15 @@ android {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
+        exclude("META-INF/LICENSE.md")
+        exclude("META-INF/LICENSE-notice.md")
     }
 
-    android {
-        testOptions {
-            unitTests {
-                includeAndroidResources = true
-                returnDefaultValues = true
-            }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 
@@ -71,7 +72,11 @@ android {
 }
 
 dependencies {
-    androidTestImplementation"com.google.truth:truth:1.1.3"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    androidTestImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
@@ -91,19 +96,21 @@ dependencies {
     implementation 'androidx.navigation:navigation-testing:2.5.3'
     implementation 'androidx.compose.material:material:1.4.3'
     androidTestImplementation "io.mockk:mockk:1.12.0"
-    androidTestImplementation 'junit:junit:4.13.2'
+//    androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test:runner:1.5.2'
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
     androidTestImplementation 'org.mockito:mockito-android:3.12.4'
-    androidTestImplementation "org.mockito:mockito-core:3.12.4"
+    androidTestImplementation "org.mockito:mockito-core:4.2.0"
+    androidTestImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
 
     //Navigation Compose
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     // Hilt Android testing dependencies
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
