--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
             android:name=".wrapper.RatingActivity"
             android:exported="true"
             android:label="HomeComponent Wrapper"
-            android:theme="@style/Theme.Bootcamp"
+            android:theme="@style/Theme.Studhub"
             />
 
         <activity
