--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,14 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation("androidx.compose.runtime:runtime-livedata:1.4.2")
+    implementation 'com.google.android.libraries.places:places:3.1.0'
+    implementation "com.google.android.gms:play-services-maps:18.1.0"
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+    implementation "com.google.android.gms:play-services-wearable:18.0.0"
+    implementation "com.google.android.gms:play-services-analytics:18.0.2"
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
