--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         compose_ui_version = '1.4.3'
-        m3_version = '1.0.1'
+        m3_version = '1.1.0-rc01'
         m2_version = '1.4.3'
         hilt_version = '2.45'
         hilt_navigation_compose_version = '1.0.0'
