--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,8 +122,22 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-util:$compose_ui_version"
+
+
 
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
+    // Camera/Pictures
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
+
+    implementation "io.coil-kt:coil-compose:2.0.0-rc01"
+    implementation 'com.google.accompanist:accompanist-pager:0.23.0'
+
+
 
 }
 
