--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         m2_version = '1.4.3'
         hilt_version = '2.45'
         hilt_navigation_compose_version = '1.0.0'
+        camerax_version = '1.3.0-alpha06'
     }
     repositories {
         // Make sure that you have the following two repositories
