--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
 
     id 'kotlin-android'
     id "kotlin-kapt"
+    id 'com.google.devtools.ksp'
     id "dagger.hilt.android.plugin"
 }
 
@@ -145,6 +146,15 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.3.0"
     implementation 'com.google.accompanist:accompanist-pager:0.23.0'
 
+    // Local DB (cache)
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
+    // JSON
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
 }
 
 tasks.withType(Test) {
