--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    allprojects {
+        tasks.withType(JavaCompile){
+            options.compilerArgs <<"-Xlint:deprecation"
+        }
+    }
     buildFeatures {
         viewBinding true
         compose true
@@ -73,6 +78,14 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation("androidx.compose.runtime:runtime-livedata:1.4.2")
+    implementation 'com.google.android.libraries.places:places:3.1.0'
+    implementation "com.google.android.gms:play-services-maps:18.1.0"
+    implementation "com.google.android.gms:play-services-location:21.0.1"
+    implementation "com.google.android.gms:play-services-wearable:18.0.0"
+    implementation "com.google.android.gms:play-services-analytics:18.0.2"
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
@@ -124,8 +137,13 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-util:$compose_ui_version"
 
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
+    // Camera/Pictures
+    implementation "io.coil-kt:coil-compose:2.3.0"
+    implementation 'com.google.accompanist:accompanist-pager:0.23.0'
 
 }
 
