--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:21.0.1"
     implementation "com.google.android.gms:play-services-wearable:18.0.0"
     implementation "com.google.android.gms:play-services-analytics:18.0.2"
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
