--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:21.0.1"
     implementation "com.google.android.gms:play-services-wearable:18.0.0"
     implementation "com.google.android.gms:play-services-analytics:18.0.2"
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
@@ -106,7 +107,7 @@ dependencies {
     // implementation "androidx.navigation:navigation-compose:2.6.0-alpha07"
     implementation 'androidx.navigation:navigation-testing:2.5.3'
     implementation 'androidx.compose.material:material:1.4.3'
-    androidTestImplementation "io.mockk:mockk:1.12.0"
+    androidTestImplementation 'io.mockk:mockk-android:1.12.0'
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -114,7 +115,14 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
     androidTestImplementation 'org.mockito:mockito-android:3.12.4'
-    androidTestImplementation "org.mockito:mockito-core:3.12.4"
+    androidTestImplementation "org.mockito:mockito-core:5.2.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
+
+    ///whenever function
+    androidTestImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+    androidTestImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+
+
 
     //Navigation Compose
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
