--- a/app/build.gradle
+++ b/app/build.gradle
@@ -195,6 +195,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
             '**/*Hilt*.*',
             'hilt_aggregated_deps/**',
             '**/*_Factory.class',
+            '**/*MembersInjector*.*',
             '**/*_MembersInjector.class',
             '**/*Injector*.*',
             '**/*Module*.*',
@@ -203,9 +204,21 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
             '**/*$Lambda*.*',
             '**/*$Companion*.*',
             '**/*$*_Factory*.*',
+            '**/*_Factory*.*',
             '**/*_Provide*Factory*.*',
             '**Dagger**',
             '**Hilt**',
+            //
+            '**/*MapperImpl*.*',
+            '**/*$ViewInjector*.*',
+            '**/*$ViewBinder*.*',
+            '**/*BR*.*',
+            '**/*$Lambda$*.*',
+            '**/*Companion*.*',
+            '**/*_Provide*Factory*.*',
+            '**/*Extensions*.*',
+
+            '**/*dao*.*',
     ]
     def debugTree = fileTree(dir: "$project.buildDir/tmp/kotlin-classes/debug", excludes: fileFilter)
     def mainSrc = "$project.projectDir/src/main/java"
