--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.maps.android:android-maps-utils:2.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation("androidx.compose.runtime:runtime-livedata:1.4.2")
@@ -88,6 +89,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-wearable:18.0.0"
     implementation "com.google.android.gms:play-services-analytics:18.0.2"
     implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
+    implementation 'org.chromium.net:cronet-embedded:98.4758.101'
     androidTestImplementation"com.google.truth:truth:1.1.3"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
